# Trading-Bot

./: CMakeLists.txt
gtests/: CMakeLists.txt  gtest_CMakeLists.txt.in  main.cpp
include/: call_option.hpp  implied_volatility.hpp  newton_raphson.hpp  option.hpp  put_option.hpp  utility.hpp
